# Openenv

./: Dockerfile  LICENSE  README.md  app.py  env_module.py  inference.py  interference.py  openenv.yaml  pyproject.toml  requirements.txt
.github/workflows/: sync_to_hub.yml  sync_to_hub.yml.
