[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "openenv1"
version = "1.0.0"
description = "Expense Tracking Environment"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "openenv-core"
]

# This is the 'server entry point' the error was asking for
[project.scripts]
server = "app:main"

[tool.setuptools]
packages = ["."]
